--- a/index.html
+++ b/index.html
@@ -4,6 +4,27 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<title>Bilal</title>
+	<style type="text/css">
+				
+			@media only screen and (max-width: 520px) {
+
+				.mobile {
+					display:block !important;
+				}
+
+				.mobilewidth{
+					width:100% !important;
+				}
+
+				.mobilewidth tr>td, .mobilewidth tr>td>a{
+					font-size:13px !important;
+				}
+
+				.aside{
+					width:100% !important;
+				}
+			}
+		</style>
 	</head>
 	
 	<body bgcolor="#c1c1c1" style="padding-top:0; padding-bottom:0; padding-right:0; padding-left:0;">
